--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 		<img src="pies2.jpg" alt="Azor">
 	</main>
 	
-	<footer>Galerię zdjęć opracował Tomasz Kocoń</footer>	
+	<footer>Galerię zdjęć opracował </footer>	
 </body>
 </html>
