--- a/koty.html
+++ b/koty.html
@@ -32,7 +32,7 @@
 	<main class="main2">
 		<p><img id="set" src="kot1.jpg" alt="kot-duzy"></p>
 	</main>	
-	<footer>Galerię zdjęć opracował Tomasz Kocoń</footer>
+	<footer>Galerię zdjęć opracował </footer>
 	
 	<script src="index.js"></script>
 </body>
