--- a/psy.html
+++ b/psy.html
@@ -45,7 +45,7 @@
 	<main class="main2">
 		<p><img id="set" src="pies1.jpg" alt="pies-duży"></p>
 	</main>
-	<footer>Galerię zdjęć opracował Tomasz Kocoń</footer>
+	<footer>Galerię zdjęć opracował </footer>
 
 	<script src="index.js"></script>
 </body>
